2011-10-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Minor peephole improvement.

2011-10-04 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/inst_r2k.cc:
	  Fix signed multiplication to use two's complement instead of sign-magnitude, 3rd attempt.

2011-10-04 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/inst_r2k.cc:
	  Fix signed multiplication to use two's complement instead of sign-magnitude, 2nd attempt.

2011-10-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sim/ucsim/z80.src/inst_r2k.cc,
	  sim/ucsim/z80.src/r2k.cc,
	  sim/ucsim/z80.src/z80cl.h,
	  sim/ucsim/z80.src/inst_ed_r2k.cc,
	  sim/ucsim/z80.src/inst_xd.cc,
	  sim/ucsim/z80.src/r2kcl.h,
	  sim/ucsim/z80.src/glob.cc:
	  Leland Morrison's support for some more r2k-specific instrcutions.

2011-10-04 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/inst_r2k.cc:
	  Fix signed multiplication to use two's complement instead of sign-magnitude.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/r2k.cc,
	  sim/ucsim/z80.src/r2kcl.h:
	  Forgotten files from Leland Morrison's Rabbit 2000 ucsim port.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  sim/ucsim/z80.src/inst_r2k.cc:
	  Fixed multiplication using r2k mul instruction.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asrab/rabbitmch.c:
	  Leland Morrison's support for ld iy, hl.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/inst_r2k.cc,
	  sim/ucsim/z80.src/glob_r2k.cc,
	  sim/ucsim/z80.src/inst_ed_r2k.cc:
	  Forgotten files from Leland Morrison's Rabbit 2000 ucsim port, support for r2k mul and ld iy, hl instructions in ucsim.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Handle r2k mul instruction in code size calculation.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/Makefile.in,